--- a/Drum Kit/Index.html
+++ b/Drum Kit/Index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>The Drum Kit</h1>
+    <!-- drum -->
     <div class="maindrums">
         <div class="drum" id="drum1"></div>
         <div class="drum" id="drum2"></div>
